[package]
name = "slice-cell"
version = "0.0.4"
authors = ["Zachary S"]
edition = "2021"
description = "A `Cell<[T]>`-like mutable slice, that allows slice-like APIs."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
keywords = ["cell", "no_std"]
repository = "https://github.com/zachs18/slice-cell"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "assume_cell_layout", "rc"]
assume_cell_layout = []
std = ["alloc"]
alloc = []
rc = ["alloc"]
tokio = ["dep:tokio", "std"]
tokio_assumptions = ["tokio"]

[dependencies]
tokio = { version = "1.24.1", default-features = false, optional = true }
