[package]
name = "slice-cell"
version = "0.1.0"
authors = ["Zachary S"]
edition = "2021"
description = "A `Cell<[T]>`-like mutable slice, that allows slice-like APIs."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["data-structures"]
keywords = ["cell", "no_std"]
repository = "https://github.com/zachs18/slice-cell"

[features]
default = ["std", "rc"]
full = ["std", "rc", "tokio"]
std = ["alloc"]
alloc = []
rc = ["alloc"]
tokio = ["dep:tokio", "std"]
tokio_assumptions = ["tokio"]
nightly_docs = []

[dependencies]
tokio = { version = "1.24.1", default-features = false, optional = true }

[package.metadata.docs.rs]
# To build locally:
# cargo +nightly doc -F full,nightly_docs --no-deps --open
features = ["full", "nightly_docs"]
